--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -125,7 +125,7 @@
 
               <!-- profile image -->
               <div class='col s2'>
-                <img ng-if="app.topic.posts[$index].file_name === 'anon.png'" ng-src="../assets/users/anon.png" class="img-circle">
+                <img ng-if="app.topic.posts[$index].file_name === 'anon.png'" ng-src="../assets/users/anon.png" class="circle">
                 <img ng-if="app.topic.posts[$index].file_name !== 'anon.png'" ng-src="../assets/users/{{p.user_id}}/{{p.file_name}}" class="img-circle">
               </div>
 
