--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -120,6 +120,12 @@ label{
     width:65%;
      font-family: 'FontAwesome';
   }
+  img{
+    display:block;
+    margin:0 auto 0 auto;
+    height:80px; 
+    width:80px;
+  }
   .btn-cool{
     height:100%;
     width:100%;
@@ -139,6 +145,7 @@ label{
       }
   }
   a{
+    margin-top: 10px;
     text-decoration:none;
     color:white;
     label{
