--- a/client/css/secondary.css
+++ b/client/css/secondary.css
@@ -86,6 +86,12 @@ label .error_msg {
   width: 65%;
   font-family: 'FontAwesome';
 }
+#topics_container img {
+  display: block;
+  margin: 0 auto 0 auto;
+  height: 80px;
+  width: 80px;
+}
 #topics_container .btn-cool {
   height: 100%;
   width: 100%;
@@ -105,6 +111,7 @@ label .error_msg {
   margin-top: .5%;
 }
 #topics_container a {
+  margin-top: 10px;
   text-decoration: none;
   color: white;
 }
