--- a/client/css/secondary.css
+++ b/client/css/secondary.css
@@ -9,6 +9,9 @@
 * h5 {
   font-size: 15px;
 }
+* a {
+  cursor: pointer;
+}
 .help-block {
   color: #f79771 !important;
   margin: 0;
@@ -84,7 +87,7 @@ label .error_msg {
   position: relative;
   margin-right: 13px;
   width: 65%;
-  font-family: 'FontAwesome';
+  font-family: 'FontAwesome', 'Roboto';
 }
 #topics_container img {
   display: block;
@@ -128,6 +131,10 @@ label .error_msg {
 }
 #topics_container a .title-desc i {
   font-size: 35px;
+}
+#topics_container a [class^="mdi-"],
+#topics_container a [class*=" mdi-"] {
+  font-family: "Material-Design-Icons", "Roboto" !important;
 }
 #topics_container a .icon-grp {
   margin-left: auto;
@@ -193,6 +200,9 @@ label .error_msg {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+}
+table {
+  margin-bottom: 50px;
 }
 .enqueue {
   box-shadow: 1.25px 1.25px 1.25px 1.25px #ee001d;
@@ -312,6 +322,7 @@ nav ul img {
   width: 100px;
 }
 nav  a {
+  font-family: "Material-Design-Icons", "Roboto" !important;
   color: #1dacd6;
 }
 nav  a:hover {
@@ -332,8 +343,7 @@ nav input {
   display: inline-block;
 }
 nav .empty input[type="text"] {
-  font-family: 'FontAwesome';
-  font-style: normal;
+  font-family: 'FontAwesome', 'Roboto';
 }
 nav a,
 nav button {
@@ -485,75 +495,51 @@ object {
 #slideout:hover #slideout_inner {
   top: -10px;
 }
-.timeline {
-  white-space: nowrap;
-  overflow-x: scroll;
-  padding: 30px 0 10px 0;
-  position: relative;
-}
-.entry {
-  display: inline-block;
-  vertical-align: top;
-  background: #13519C;
-  color: #fff;
-  padding: 10px;
-  font-size: 12px;
-  text-align: center;
-  position: relative;
-  border-top: 4px solid #06182E;
-  border-radius: 3px;
-  min-width: 200px;
-  max-width: 500px;
-}
-.entry img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-.entry:after {
-  content: '';
-  display: block;
-  background: #eee;
-  width: 7px;
-  height: 7px;
-  border-radius: 6px;
-  border: 3px solid #06182E;
-  position: absolute;
-  left: 51%;
-  top: -30px;
-  margin-left: -6px;
-}
-.entry:before {
-  content: '';
-  display: block;
-  background: #06182E;
-  width: 5px;
-  height: 20px;
-  position: absolute;
-  left: 50%;
-  top: -20px;
-  margin-left: -2px;
-}
-.entry h1 {
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-.entry h2 {
-  letter-spacing: .2em;
-  margin-bottom: 10px;
-  font-size: 14px;
-}
-.bar {
-  margin-top: 2%;
-  height: 4px;
-  background: #eee;
-  width: 100%;
-  position: relative;
-  top: 13px;
-  left: 0;
+@media screen and (min-width: 300px) and (max-width: 992px) {
+  .desc p {
+    display: inline-flex;
+    display: -webkit-inline-flex;
+    display: -moz-inline-flex;
+    display: -ms-inline-flexbox;
+  }
+  #topics_container a .icon-grp i {
+    font-size: 4.3rem;
+    margin: auto;
+  }
+  .nav-drop {
+    display: block;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .nav-drop .nav-drop-group {
+    position: fixed;
+    background: #2b2a30;
+    right: -120px;
+    top: -12px;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .nav-drop .nav-drop-group li {
+    float: none;
+  }
+  .nav-drop:hover .nav-drop-group {
+    right: 0px;
+  }
+  .title-desc {
+    line-height: 12px;
+  }
+  .title-desc h4 {
+    margin-top: 2.14rem;
+    font-size: x-large !important;
+    text-align: center !important;
+  }
+  .title-desc i {
+    font-size: 35px;
+  }
 }
 @media screen and (min-width: 601px) and (max-width: 992px) {
   .btn-cool {
@@ -578,29 +564,6 @@ object {
   }
 }
 @media screen and (min-width: 300px) and (max-width: 459px) {
-  .nav-drop {
-    display: block;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .nav-drop .nav-drop-group {
-    position: fixed;
-    background: #2b2a30;
-    right: -120px;
-    top: -12px;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .nav-drop .nav-drop-group li {
-    float: none;
-  }
-  .nav-drop:hover .nav-drop-group {
-    right: 0px;
-  }
   .dash-posts {
     padding: 10%;
   }
@@ -617,46 +580,8 @@ object {
   .pst i {
     font-size: 10px;
   }
-  .title-desc {
-    line-height: 12px;
-  }
-  .title-desc h4 {
-    margin-top: 2.14rem;
-    font-size: x-large !important;
-    text-align: center !important;
-  }
-  .title-desc i {
-    font-size: 35px;
-  }
-  #topics_container a .icon-grp i {
-    font-size: 4.3rem;
-    margin: auto;
-  }
 }
 @media screen and (min-width: 450px) and (max-width: 990px) {
-  .nav-drop {
-    display: block;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .nav-drop .nav-drop-group {
-    position: fixed;
-    background: #2b2a30;
-    right: -120px;
-    top: -11px;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .nav-drop .nav-drop-group li {
-    float: none;
-  }
-  .nav-drop:hover .nav-drop-group {
-    right: 0px;
-  }
   .dash-posts {
     padding: 3%;
   }
@@ -666,21 +591,6 @@ object {
   }
   .posts {
     height: 300px;
-  }
-  .title-desc {
-    line-height: 12px;
-  }
-  .title-desc h4 {
-    margin-top: 2.14rem;
-    font-size: x-large !important;
-    text-align: center !important;
-  }
-  .title-desc i {
-    font-size: 35px;
-  }
-  #topics_container a .icon-grp i {
-    font-size: 4.3rem;
-    margin: auto;
   }
 }
 @media screen and (min-height: 850px) and (max-height: 1000px) {
@@ -700,4 +610,9 @@ object {
   -webkit-box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.16), 0 0 0 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.16), 0 0 0 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.16), 0 0 0 0 rgba(0, 0, 0, 0.12);
+}
+@media screen and (min-width: 300px) and (max-width: 1340px) {
+  .btn-cool h4 {
+    font-size: 17px;
+  }
 }
