--- a/client/css/splash.less
+++ b/client/css/splash.less
@@ -160,7 +160,7 @@ label{
 
   //materialize select styling -- material default select is controlled by jQuery
     select{
-      font-family: FontAwesome;
+      font-family: 'FontAwesome', 'Roboto';
        background-color: rgba(43, 187, 173, .6) !important;
        border: none !important; 
        margin-bottom: 5px;
