--- a/client/partials/profile.html
+++ b/client/partials/profile.html
@@ -3,7 +3,7 @@
   <div class="nav-wrapper">
     <img src="./../img/coding_dojo.png"><!-- Coding Dojo log -->
     <ul id="nav-mobile" class="right right hide-on-med-and-down">
-      <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#user/{{app.settings.user_id}}">Profile</a></li>
+      <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#/user/{{app.settings.user_id}}">Profile</a></li>
       <li><a class='mdi-action-dashboard' href="/#/dashboard">Dashboard</a></li>
       <li><a class='mdi-action-settings-applications' ng-href="/#/settings">Settings</a></li>
       <li><a class='mdi-navigation-arrow-back' ng-click="app.functions.log_out()">Log off</a></li>
@@ -11,7 +11,7 @@
     <div class='nav-drop'>
       <i class='mdi-navigation-more-vert right '>
         <ul class='nav-drop-group right'>
-          <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#user/{{app.settings.user_id}}">Profile</a></li>
+          <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#/user/{{app.settings.user_id}}">Profile</a></li>
           <li><a class='mdi-action-dashboard' href="/#/dashboard">Dashboard</a></li>
           <li><a class='mdi-action-settings-applications' ng-href="/#/settings">Settings</a></li>
           <li><a class='mdi-navigation-arrow-back' ng-click="app.functions.log_out()">Log off</a></li>
