--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -66,7 +66,7 @@
     </div><!-- end search button -->
 
     <ul id="nav-mobile" class="right right hide-on-med-and-down">
-      <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#user/{{app.settings.user_id}}">Profile</a></li>
+      <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#/user/{{app.settings.user_id}}">Profile</a></li>
       <li><a class='mdi-action-dashboard' href="/#/dashboard">Dashboard</a></li>
       <li><a class='mdi-action-settings-applications' ng-href="/#/settings">Settings</a></li>
       <li><a class='mdi-navigation-arrow-back' ng-click="app.functions.log_out()">Log off</a></li>
@@ -75,7 +75,7 @@
     <div class='nav-drop'>
       <i class='mdi-navigation-more-vert right '>
         <ul class='nav-drop-group right'>
-          <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#user/{{app.settings.user_id}}">Profile</a></li>
+          <li ng-if='app.settings.user_level <= 5'><a class='mdi-action-account-circle' ng-href="/#/user/{{app.settings.user_id}}">Profile</a></li>
           <li><a class='mdi-action-dashboard' href="/#/dashboard">Dashboard</a></li>
           <li><a class='mdi-action-settings-applications' ng-href="/#/settings">Settings</a></li>
           <li><a class='mdi-navigation-arrow-back' ng-click="app.functions.log_out()">Log off</a></li>
