--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -16,6 +16,11 @@
   a{
     cursor: pointer;
   }
+  select{
+    font-family: 'FontAwesome', 'Roboto'; 
+    background-color:#26A69A;
+    color:white;
+  }
 }
 
 // error messages
@@ -724,7 +729,7 @@ margin-left: -150px;
 @media screen and (min-width:300px) and (max-width: 1340px){
       .btn-cool{
         h4{
-              font-size: 17px
+              font-size: 17px !important;
         }
     }
 }
