--- a/client/partials/settings.html
+++ b/client/partials/settings.html
@@ -80,7 +80,7 @@
 
   <form name="app.forms.picForm" ng-submit="app.functions.submitForm(app.forms.picForm.$valid, 'pic')" novalidate>
           <h4>Update Profile Pic</h4>
-      <button id='file' class='btn btn-file '>
+      <button id='file' class='btn btn-file' ng-class="{red : app.forms.profile.pic.name == 'no file chosen'}">
       <span id='file' ng-bind='app.forms.profile.pic.name'></span>
         <input type="file" ng-model="app.forms.profile.pic" file-model="app.forms.profile.pic" name="pic" required/>
     </button>
