--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -18,7 +18,7 @@
 
           <!-- add response form -->
           <form name="app.forms.videoForm" ng-submit="app.functions.submitForm(app.forms.videoForm.$valid, 'video')" novalidate>
-            <span id='file' class='btn btn-file '>
+            <span id='file' class='btn btn-file' ng-class="{'red' : app.forms.video.name === 'no file chosen'}">
               <span id='file' ng-bind='app.forms.video.name'></span>
               <input type='file' file-model="app.forms.video" ng-model="app.forms.video" name="video_path" id="inputFile" class='btn green'/>
             </span>
