--- a/client/partials/profile.html
+++ b/client/partials/profile.html
@@ -67,7 +67,9 @@
 
     <!-- title & description -->
     <div class='col s12 m12 l6 title-desc'>
-      <h4>{{t.title | limitTo: 20 }}{{t.title.length > 20 ? '...' : ''}}:<span ng-class="{'orange-text bold': t.status == 'reviewed', 'red-text bold': t.status == 'enqueue', 'teal-text bold': t.status == 'completed' }">{{t.status}}</span></h4>
+      <h4>{{t.title | limitTo: 20 }}{{t.title.length > 20 ? '...' : ''}}:<span class='lighten-2 bold' ng-class="{'orange-text': t.status == 'reviewed', 'red-text': t.status == 'enqueue', 'light-green-text': t.status == 'completed' }">{{t.status}}</span> <br />
+        <small>Updated: {{t.updated_at | date:"mediumDate"}} at {{t.updated_at | date: "shortTime"}}</small>
+      </h4>
     </div>
 
     <!-- topic stats -->
