--- a/client/css/secondary.css
+++ b/client/css/secondary.css
@@ -132,6 +132,7 @@ label .error_msg {
 }
 #topics_container a .title-desc h4 {
   margin-top: 2.14rem;
+  line-height: 1.5rem;
   text-align: left;
 }
 #topics_container a .title-desc i {
@@ -172,6 +173,7 @@ label .error_msg {
   margin-left: -206px;
 }
 .desc p {
+  margin-top: 0px;
   text-align: left;
 }
 #topic-stats {
@@ -420,7 +422,7 @@ object {
   margin-left: auto;
   margin-right: 3%;
   margin-top: 3%;
-  line-height: 15px;
+  line-height: 20px;
   border-radius: 30px 30px 30px 0px;
   box-shadow: 2px 2px 4px #888;
   padding: 2%;
@@ -431,14 +433,16 @@ object {
   background: #22ae4b;
   margin-top: 3%;
   float: right;
-  line-height: 15px;
+  line-height: 20px;
   border-radius: 30px 30px 0px 30px;
   box-shadow: 2px 2px 4px #888;
-  padding: 2%;
+  padding: 1%;
   height: auto;
   width: 90%;
 }
 .posts img {
+  display: block;
+  margin-left: auto;
   margin-right: auto;
   height: 80px;
   width: 80px;
