--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -164,6 +164,7 @@ label{
     .title-desc{
       h4{
         margin-top: 2.14rem;
+        line-height: 1.5rem;
         text-align: left;
       }
       i{
@@ -208,6 +209,7 @@ label{
 }
     .desc{
       p{
+        margin-top: 0px;
         text-align: left;
       }
     }
@@ -500,29 +502,30 @@ overflow-x:hidden;
       margin-left:auto;
       margin-right:3%;
       margin-top:3%;
-      line-height:15px;
+      line-height:20px;
       border-radius:30px 30px 30px 0px;
       box-shadow:2px 2px 4px #888;
       padding:2%;
       height:auto;
       width:auto;
-
   }
   .comment{
     background:@res-green;
     margin-top:3%;
     float:right;
-    line-height:15px;
+    line-height:20px;
     border-radius:30px 30px 0px 30px;
     box-shadow:2px 2px 4px #888;
-    padding:2%;
+    padding:1%;
     height:auto;
     width:90%;
   }
   img{
-    margin-right:auto;
-    height:80px;
-    width:80px;
+  display: block;
+  margin-left: auto;    
+  margin-right: auto;
+  height: 80px;
+  width: 80px;
   }
 }
 
