--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -114,8 +114,7 @@
           <div class="btn-group" role="group" aria-label="...">
             <button ng-repeat="f in app.topic.files" type="button" class="btn btn-version" ng-click="app.functions.switch_file($index)">{{$index + 1}}</button>
           </div>
-
-          <div data-display-file="app.topic.file"></div>
+          <iframe ng-repeat="f in app.topic.files" src="{{f.key}}" ng-show="app.topic.show_file === $index"></iframe>
         </div>
       </div>
     </div><!-- end left page -->
