--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -29,6 +29,12 @@
         color:lighten(@res-ints-orange, 15%) !important;
         margin:0;
 }
+.errors{
+  height:25px;
+  h4{
+    margin:0;
+  }
+}
 
 label{
   color:black;
@@ -589,6 +595,10 @@ margin-left: -150px;
       }
       .btn{
         width:100%;
+        i{
+          display: flex;
+          font-size: 25px;
+        }
       }
 }
 
