--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -17,10 +17,11 @@
           <!-- user name error messages -->
         <div class='error_msg' ng-messages="app.forms.regForm.name.$error" ng-if="app.forms.regForm.$submitted || !app.forms.regForm.name.$pristine">
           <h6 ng-message="required" class="help-block">Username is required</h6>
+          <h6 ng-message="maxlength" class="help-block">Password is too long.</h6>
           <h6 ng-message="pattern"  class="help-block">Letters &amp; Numbers only.</h6>
         </div>
       </label>
-      <input type="text" ng-model="app.forms.registration.name" ng-pattern="app.patterns.letters" id='name' name="name" ng-trim="true"  required/>
+      <input type="text" ng-model="app.forms.registration.name" ng-pattern="app.patterns.letters" id='name' name="name" ng-trim="true" ng-maxlength="255" required/>
 
       <!-- email input -->
       <label for='email'>
@@ -29,23 +30,23 @@
         <div class='error_msg' ng-messages="app.forms.regForm.email.$error" ng-if="app.forms.regForm.$submitted || !app.forms.regForm.email.$pristine">
           <h6 ng-message="required" class="help-block">Email is required.</h6>
           <h6 ng-message="pattern"  class="help-block">Email is invalid.</h6>
+          <h6 ng-message="maxlength" class="help-block">Email is too long.</h6>
         </div>
       </label>
-      <input type="email" ng-model="app.forms.registration.email" ng-pattern="app.patterns.email" id='email' name="email" ng-trim="true"  required/>
+      <input type="email" ng-model="app.forms.registration.email" ng-pattern="app.patterns.email" id='email' name="email" ng-trim="true" ng-maxlength="255" required/>
 
       <!-- password input -->
       <label for='password'>
         <h6>Password</h6>
-              <!-- password error messages -->
-      <div class='error_msg' ng-messages="app.forms.regForm.password.$error" ng-if="app.forms.regForm.$submitted || !app.forms.regForm.password.$pristine">
-        <h6 ng-message="required"  class="help-block">Password is required.</h6>
-       <h6 ng-message="minlength" class="help-block">Password is too short.</h6>
-       <h6 ng-message="maxlength" class="help-block">Password is too long.</h6>
-       <h6 ng-message="pattern"   class="help-block">Alphanumeric Only.</p>
-      </div>
+        <!-- password error messages -->
+        <div class='error_msg' ng-messages="app.forms.regForm.password.$error" ng-if="app.forms.regForm.$submitted || !app.forms.regForm.password.$pristine">
+          <h6 ng-message="required"  class="help-block">Password is required.</h6>
+          <h6 ng-message="minlength" class="help-block">Password is too short.</h6>
+          <h6 ng-message="maxlength" class="help-block">Password is too long.</h6>
+          <h6 ng-message="pattern"   class="help-block">Alphanumeric Only.</p>
+        </div>
       </label>
-      <input type="password" ng-model="app.forms.registration.password" ng-pattern="app.patterns.password" ng-change="app.functions.isMatch()" ng-minlength="6" ng-maxlength="72" name="password" id='password' required/>
-
+      <input type="password" ng-model="app.forms.registration.password" ng-pattern="app.patterns.password" ng-change="app.functions.isMatch()" ng-minlength="6" ng-maxlength="72" name="password" id='password' ng-trim="true"  required/>
 
       <!-- password confirmation input -->
       <label for='confirm'>
@@ -56,7 +57,7 @@
          <h6 ng-message="match"    class="help-block">Password doesn't match</h6>
         </div>
       </label>
-      <input type="password" ng-model="app.forms.registration.confirm"  ng-pattern="app.patterns.password" ng-change="app.functions.isMatch()" name="confirm" id='confirm' required/>
+      <input type="password" ng-model="app.forms.registration.confirm"  ng-pattern="app.patterns.password" ng-change="app.functions.isMatch()" name="confirm" id='confirm' ng-trim="true"  required/>
 
       <!-- location input -->
       <select  name="location" ng-model="app.forms.registration.location"class='browser-default' ng-class="{'red darken-2': app.forms.regForm.$submitted && app.forms.regForm.location.$pristine}"required>
@@ -88,10 +89,9 @@
 
       <!-- profile pic input -->
       <span id='file' class='btn btn-file '>
-<!--       <span id='file' ng-if='app.forms.registration.pic.name = null'>Upload Profile Pic</span>
- -->      <span id='file' ng-bind='app.forms.registration.pic.name'></span>
+        <span id='file' ng-bind='app.forms.registration.pic.name'></span>
         <input type="file" file-model="app.forms.registration.pic" ng-model="app.forms.registration.pic" name="pic_path" id="inputFile" />
-    </span>
+      </span>
 
       <!-- submit button -->
       <button type="submit" class='btn btn-log'>Register</button>
