--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -89,6 +89,9 @@ label{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  .active{
+    background-color: darken(@res-teal, 10%);
+  }
   #grp-1{
     .btn-filter{
       border-top-right-radius: 0px;
@@ -483,7 +486,6 @@ iframe{
     margin-right:auto;
     width:89%;
     display:inline-block !important;
-    color:@res-blue;
   }
   .btn-p{
     display:inline-block;
@@ -498,7 +500,7 @@ iframe{
 .posts{
 clear:both;
 color:ghostwhite;
-padding-top:0px !important;
+padding:0 40px 40px 40px !important;
 width:100%;
 height:73vh;
 overflow-y:scroll;
