--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -54,7 +54,7 @@
                 <span id='file' ng-bind='app.forms.file.name'></span>
                 <input type="file" file-model="app.forms.file" ng-model="app.forms.file" name="revision" id="inputFile"/>
               </span>
-              <button class='btn blue'>Upload File <i ng-if='stuff===true' class="fa fa-circle-o-notch fa-spin"></i></button>
+              <button class='btn blue' type='submit'>Upload File <i class="fa fa-circle-o-notch fa-spin"></i></button>
             </form>
           </div>
         </div><!-- end user privacy switch -->
@@ -101,7 +101,7 @@
         <!-- end switch toggle-->
         <div ng-if="app.settings.isVideo">
           <div class="btn-group" role="group" aria-label="...">
-            <button ng-repeat="v in app.topic.videos" type="button" class="waves-effect btn btn-version" ng-click="app.functions.switch_video($index)">{{$index + 1}}</button>
+            <button ng-repeat="v in app.topic.videos" type="button" class="btn btn-version" ng-click="app.functions.switch_video($index)" ng-class="{'active' : app.topic.show_video === $index}">{{$index + 1}}</button>
           </div>
           <video ng-repeat="v in app.topic.videos" ng-show="app.topic.show_video === $index" class="video-js vjs-default-skin" controls preload="auto">
             <source ng-src="{{v.key}}" type='video/mp4'/>
@@ -112,7 +112,7 @@
         <!-- PDF -->
         <div ng-if="!app.settings.isVideo">
           <div class="btn-group" role="group" aria-label="...">
-            <button ng-repeat="f in app.topic.files" type="button" class="btn btn-version" ng-click="app.functions.switch_file($index)" autofocus>{{$index + 1}}</button>
+            <button ng-repeat="f in app.topic.files" type="button" class="btn btn-version" ng-click="app.functions.switch_file($index)" ng-class="{'active' : app.topic.show_file === $index}">{{$index + 1}}</button>
           </div>
           <div data-display-file="app.topic.file"></div>
           <iframe ng-repeat="f in app.topic.files" src="{{f.key}}" ng-show="app.topic.show_file === $index"></iframe>
@@ -126,7 +126,7 @@
       <div class='form-group new_post'>
         <h6 class='teal-text'>A bit about this topic: <span class='grey-text'>{{app.topic.stats.description}}</span></h6>
         <button class="btn btn-floating red" ng-click="app.functions.add_post(null, 0, app.forms.post)"><i class='mdi-image-edit'></i></button>
-        <input ng-model="app.forms.post" type="text" class='form-control' placeholder='start a new post!' value="">
+        <input ng-model="app.forms.post" type="text" placeholder='add a new post!' class='teal-text'>
       </div>
 
       <!--  end of user new post input  -->
